# https://doc.rust-lang.org/cargo/reference/profiles.html

[package]
name = "bevysandbox"
version = "0.1.0"
edition = "2021"
publish = false
#default-run = "scene"
default-run = "game"
#build = "build.rs"

[[bin]]
name = "scene"
path = "src/bin/scene.rs"

[[bin]]
name = "game"
path = "src/bin/game.rs"

#[[bin]]
#name = "prototype"
#path = "src/bin/prototype.rs"

#[[bin]]
#name = "editor"
#path = "src/bin/editor.rs"

# exclude = ["crates/foo", "path/to/other"]
# https://bevyengine.org/learn/book/getting-started/setup/

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 0
overflow-checks = false # Disable integer overflow checks.

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can 
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
winit = "0.29"
image = "0.24"
bevy = { version = "0.13.0", features = [
  #"bevy_ui",
  #"bmp", 
  #"jpeg", 
  #"wav", 
  #"zlib",
  #"bevy_animation",
  #"bevy_core_pipeline",
  #"dynamic_linking"
]}
#bevy-inspector-egui = "0.18.3"
#bevy_console = "0.7.0"
#bevy_egui = "0.20.3"

#bevy_rapier3d = "0.25.0"
#bevy_renet = { version = "0.0.11"}
#eframe = { version = "0.22.0", default-features = false, features = [
  #"__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
  #"default_fonts", # Embed the default egui fonts.
  #"glow",          # Use the glow rendering backend. Alternative: "wgpu".
  #"persistence",   # Enable restoring app state when restarting the app.
#]}

#renet = { version = "0.0.15", default-features=false, features = ["bevy"] }

#bincode = "1.3.3"
#clap = "4.1.10"
#env_logger = "0.11.2"

#bevy_flycam = "0.10.1"
#bevy_mod_picking = "0.14.0"
#bevy_mod_raycast = "0.16.0"
#tracing-subscriber = "0.3.17"
#bevy_mod_scripting = {version = "0.3.0", features =["lua54","lua_script_api"]}
#bevy_transform_gizmo = "0.7.0"

#[build-dependencies] # for window icon
#winres = "0.1"

#[[example]]
#name = "firstperson"
#path = "src/examples/firstperson.rs"

#[[example]]
#name = "launcher"
#path = "src/examples/launcher.rs"

#[[example]]
#name = "menutest"
#path = "src/examples/menutest.rs"

#[[example]]
#name = "network"
#path = "src/examples/network.rs"

#[[example]]
#name = "physics"
#path = "src/examples/physics.rs"

#[[example]]
#name = "pick"
#path = "src/examples/pick.rs"

#[[example]]
#name = "raycast_pick"
#path = "src/examples/mouse_picking.rs"

#[[example]]
#name = "scripting"
#path = "src/examples/scripting.rs"

#[[example]]
#name = "scene3d"
#path = "src/examples/scene3d.rs"

#[[example]]
#name = "bevyegui"
#path = "src/examples/bevyegui.rs"

#[[example]]
#name = "blankwindow"
#path = "src/examples/blankwindow.rs"

#[[example]]
#name = "button"
#path = "src/examples/button.rs"

#[[example]]
#name = "saveloadscene"
#path = "src/examples/saveloadscene.rs"

#[[example]]
#name = "mesh"
#path = "src/examples/mesh.rs"

#[[example]]
#name = "inventory"
#path = "src/examples/inventory_menu.rs"

#[[example]]
#name = "mesh01"
#path = "src/examples/mesh01.rs"
