# https://doc.rust-lang.org/cargo/reference/profiles.html

[package]
name = "bevysandbox"
version = "0.1.0"
edition = "2021"
publish = false
#default-run = "scene"
default-run = "game"
#build = "build.rs"

#[[bin]]
#name = "scene"
#path = "src/bin/scene.rs"

[[bin]]
name = "game"
path = "src/bin/game.rs"

#[[bin]]
#name = "prototype"
#path = "src/bin/prototype.rs"

#[[bin]]
#name = "editor"
#path = "src/bin/editor.rs"

# exclude = ["crates/foo", "path/to/other"]
# https://bevyengine.org/learn/book/getting-started/setup/

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 0
overflow-checks = false # Disable integer overflow checks.

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can 
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[features]
default = ["serde","transport"]
serde = ["renet/serde"]
transport = ["renet/transport"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
winit = "0.29"
image = "0.25"
# https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md
bevy = { version = "0.13.0", features = [
  "bevy_ui",
  "bmp", 
  "jpeg",
  "png",
  "bevy_gltf",
  #"wav",
  "zlib",
  "animation",
  "bevy_animation",
  "bevy_core_pipeline",
  #"dynamic_linking"
]}
bevy-inspector-egui = "0.23"
bevy_egui = "0.25"
rand = "0.8.5"
bevy_console = "0.11.1"
bevy_rapier3d = "0.25.0"

clap = { version = "4.5", features = ["derive"] }

bevy_renet = { version = "0.0.11"}
#eframe = { version = "0.22.0", default-features = false, features = [
  #"__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
  #"default_fonts", # Embed the default egui fonts.
  #"glow",          # Use the glow rendering backend. Alternative: "wgpu".
  #"persistence",   # Enable restoring app state when restarting the app.
#]}

renet = { version = "0.0.15", default-features=false, features = ["bevy"] }
#bincode = "1.3.3"

#env_logger = "0.11.2"

#bevy_flycam = "0.10.1"
#bevy_mod_picking = "0.14.0"
#bevy_mod_raycast = "0.16.0"
#tracing-subscriber = "0.3.17"
#bevy_mod_scripting = {version = "0.3.0", features =["lua54","lua_script_api"]}
#bevy_transform_gizmo = "0.7.0"

#[build-dependencies] # for window icon
#winres = "0.1"

[dev-dependencies]
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}

[[example]]
name = "mesh00"
path = "src/examples/mesh00.rs"

[[example]]
name = "sample00"
path = "src/examples/test_window.rs"

[[example]]
name = "sample01"
path = "src/examples/scene3d.rs"

[[example]]
name = "sample02"
path = "src/examples/inspector_scene3d.rs"

[[example]]
name = "sample03"
path = "src/examples/test_button.rs"

[[example]]
name = "scene04"
path = "src/examples/raypick.rs"

[[example]]
name = "egui00"
path = "src/examples/test_egui.rs"

[[example]]
name = "egui01"
path = "src/examples/test_egui01.rs"

[[example]]
name = "keys"
path = "src/examples/ui_keyboard.rs"

[[example]]
name = "keys01"
path = "src/examples/ui_keyboard01.rs"

[[example]]
name = "keys02"
path = "src/examples/virtual_keyboard01.rs"

[[example]]
name = "physics00"
path = "src/examples/physics.rs"

[[example]]
name = "test00"
path = "src/examples/inventory_menu.rs"

[[example]]
name = "test01"
path = "src/examples/firstperson00.rs" #Fly Camera

#[[example]]
#name = "test02"
#path = "src/examples/firstperson00.rs" #Fly Camera

[[example]]
name = "load00"
path = "src/examples/load_gltf.rs"

[[example]]
name = "load01"
path = "src/examples/load_gltf01.rs"

#[[example]]
#name = "ecs00"
#path = "src/examples/ecs00.rs" # https://github.com/bevyengine/bevy/blob/main/examples/scene/scene.rs

[[example]]
name = "atlas"
path = "src/examples/texture_atlas.rs"

[[example]]
name = "atlas01"
path = "src/examples/atlas_keys.rs"

[[example]]
name = "atlas02"
path = "src/examples/atlas_keyboard00.rs"

[[example]]
name = "scenesl00"
path = "src/examples/saveloadscene.rs"

[[example]]
name = "menu00"
path = "src/examples/samplemenu.rs"

[[example]]
name = "menu01"
path = "src/examples/menu.rs"

[[example]]
name = "camera00"
path = "src/examples/cameraswitch.rs"

[[example]] # error ClientId for Deserialize
name = "network"
path = "src/examples/network.rs"
required-features = ["serde", "transport"] #need check for default set up