[package]
name = "bsandbox"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = []}
#rapier3d = "0.17.1"
bevy_rapier3d = "0.20.0"
bevy-inspector-egui = "0.17"
log = "0.4"
serde = { version = "1", features = [ "derive" ], optional = true}
