[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = []}
bevy_egui = "0.18.0"
bevy-inspector-egui = "0.16"
egui = "0.20"