[package]
name = "game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true #automatically strip symbols from binary
opt-level = "s" # optimize for size
lto = true #enabl link time optimizations
codegen-units = 1 # maximize size reducation optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = []}
bevy_console = "0.6.0"
clap = "4.0.32"
bevy_egui = "0.19.0"
bevy_mod_picking = "0.11"
bevy-inspector-egui = "0.17"

[[example]]
name = "test"
path = "examples/test.rs"
crate-type = ["bin"]

[[example]]
name = "button"
path = "examples/button.rs"
crate-type = ["bin"]

[[example]]
name = "scene3d"
path = "examples/scene3d.rs"
crate-type = ["bin"]

[[example]]
name = "load_gltf"
path = "examples/load_gltf.rs"
crate-type = ["bin"]

[[example]]
name = "saveloadscene"
path = "examples/saveloadscene.rs"
crate-type = ["bin"]

[[example]]
name = "blank"
path = "examples/blank.rs"
crate-type = ["bin"]