[package]
name = "network"
version = "0.1.0"
edition = "2021"
publish = false
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = []}
bevy_renet = "0.0.6"
serde = "1.0.152"
bincode = "1.3.3"