[package]
name = "scripting"
version = "0.1.0"
edition = "2021"
publish = false
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
clap = "4.0.32"
bevy_console = "0.5.0"
bevy_mod_scripting = {version = "0.2.2", features =["lua54","lua_script_api"]}


