[package]
name = "testgame"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
clap = "4.0.32"
bevy_console = "0.5.0"


[profile.release]
strip = true #automatically strip symbols from binary
opt-level = "s" # optimize for size
lto = true #enabl link time optimizations
codegen-units = 1 # maximize size reducation optimizations