# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#:~:text=The%20default%20binary%20filename%20is,toml%20.
[package]
name = "testgame"
version = "0.1.0"
edition = "2021"
publish = false
#default-run = "testgame"

# Example of customizing binaries in Cargo.toml.
# https://stackoverflow.com/questions/26946646/package-with-both-a-library-and-a-binary
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
[[bin]]
name = "testgame"
#path = "src/bin/testgame.rs"
path = "src/main.rs"
test = false
bench = false
# 
[lib]
name = "mylib"
path = "src/lib.rs"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true #automatically strip symbols from binary
opt-level = "s" # optimize for size
lto = true #enabl link time optimizations
codegen-units = 1 # maximize size reducation optimizations

[dependencies]
bevy = {version = "0.9"}
clap = "4.0.32"
bevy_console = "0.6.0"
bevy_mod_picking = "0.11"
bevy_rapier3d = "0.20.0"
bevy-inspector-egui = "0.17"
bevy_egui = "0.19.0"
egui = "0.21.0"
serde = { version = "1", features = [ "derive" ], optional = true}
#log = "0.4"
#env_logger = "0.10"

testlib = {version = "0.1.0", path = "../testlib"}


[[example]]
name= "deselection"
path = "src/examples/deselection.rs"
crate-type = ["bin"]

[[example]]
name= "pick_test"
path = "src/examples/pick_test.rs"
crate-type = ["bin"]

[[example]]
name= "vertex_colors"
path = "src/examples/vertex_colors.rs"
crate-type = ["bin"]

[[example]]
name= "cube_texture"
path = "src/examples/cube_texture.rs"
crate-type = ["bin"]

[[example]]
name= "animated_fox"
path = "src/examples/animated_fox.rs"
crate-type = ["bin"]

[[example]]
name= "cube_texture02"
path = "src/examples/cube_texture02.rs"
crate-type = ["bin"]

[[example]]
name= "lines"
path = "src/examples/lines.rs"
crate-type = ["bin"]

[[example]]
name= "skybox"
path = "src/examples/skybox.rs"
crate-type = ["bin"]

[[example]]
name= "render_to_texture"
path = "src/examples/render_to_texture.rs"
crate-type = ["bin"]

[[example]]
name= "array_textures"
path = "src/examples/array_textures.rs"
crate-type = ["bin"]

[[example]]
name= "cube_texture_image"
path = "src/examples/cube_texture_image.rs"
crate-type = ["bin"]

[[example]]
name= "cube_texture_image02"
path = "src/examples/cube_texture_image02.rs"
crate-type = ["bin"]

[[example]]
name= "editor"
path = "src/examples/editor.rs"
crate-type = ["bin"]

[[example]]
name= "egui_cube"
path = "src/examples/egui_cube.rs"
crate-type = ["bin"]

[[example]]
name= "bevy_egui01"
path = "src/examples/bevy_egui01.rs"
crate-type = ["bin"]

[[example]]
name= "side_panels"
path = "src/examples/side_panels.rs"
crate-type = ["bin"]
